One more commit before functional

--- a/_indicators/1_Poverty/1-2-2.md
+++ b/_indicators/1_Poverty/1-2-2.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 2
 indicator: 2
-permalink: /1-2-2
 title: Proportion of men, women and children of all ages living in poverty in all its dimensions according to national definitions
 new: No
 notes:
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "Example Dataset"
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
