--- a/_indicators/1_Poverty/1-3-1.md
+++ b/_indicators/1_Poverty/1-3-1.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 3
 indicator: 1
-permalink: /1-3-1
 title: Proportion of population covered by social protection floors/systems, by sex, distinguishing children, unemployed persons, older persons, persons with disabilities, pregnant women, newborns, work injury victims and the poor and the vulnerable
 new: No
 notes:
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "Example Dataset"
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
