--- a/_indicators/1_Poverty/1-4-1.md
+++ b/_indicators/1_Poverty/1-4-1.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 4
 indicator: 1
-permalink: /1-4-1
 title: Proportion of population living in households with access to basic services
 new: No
 notes:
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "Example Dataset"
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
