--- a/_indicators/1_Poverty/1-4-2.md
+++ b/_indicators/1_Poverty/1-4-2.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 4
 indicator: 2
-permalink: /1-4-2
 title: Proportion of total adult population with secure tenure rights to land, with legally recognized documentation and who perceive their rights to land as secure, by sex and by type of tenure
 new: Yes
 notes:
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "Example Dataset"
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
