--- a/_indicators/1_Poverty/1-5-2.md
+++ b/_indicators/1_Poverty/1-5-2.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 5
 indicator: 2
-permalink: /1-5-2
 title: Direct disaster economic loss in relation to global gross domestic product (GDP)*
 new: Yes
 notes: ""
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "Example Dataset"
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
