--- a/_indicators/1_Poverty/1-a-1.md
+++ b/_indicators/1_Poverty/1-a-1.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: a
 indicator: 1
-permalink: /1-a-1
 title: Proportion of resources allocated by the government directly to poverty reduction programmes
 new: No
 notes: ""
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: ""
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
