--- a/_indicators/1_Poverty/1-5-3.md
+++ b/_indicators/1_Poverty/1-5-3.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: 5
 indicator: 3
-permalink: /1-5-3
 title: Number of countries with national and local disaster risk reduction strategies*
 new: Yes
 notes: ""
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: ""
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
