--- a/_indicators/1_Poverty/1-a-2.md
+++ b/_indicators/1_Poverty/1-a-2.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: a
 indicator: 2
-permalink: /1-a-2
 title: Proportion of total government spending on essential services (education, health and social protection)
 new: No
 notes: ""
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: "" 
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
