--- a/_indicators/1_Poverty/1-b-1.md
+++ b/_indicators/1_Poverty/1-b-1.md
@@ -1,14 +1,13 @@
 ---
-layout: dashboard
 goal: 1
 subgoal: b
 indicator: 1
-permalink: /1-b-1
 title: Proportion of government recurrent and capital spending to sectors that disproportionately benefit women, the poor and vulnerable groups
 new: Yes
 notes: ""
 datasets:
-  - dataset: "" #UUID or URI
+  - dataset: ""
+    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
     todo: 10
     doing: 0
     done: 90
