--- a/_indicators/1_Poverty/1-5-2.md
+++ b/_indicators/1_Poverty/1-5-2.md
@@ -7,11 +7,12 @@ new: Yes
 notes: ""
 datasets:
   - dataset: "Example Dataset"
-    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
+    uri: "/UUID"
     todo: 10
     doing: 0
     done: 90
     coverage: ""
+    organization: ""
     issues:
     - issue: info #todo, doing, done
       text: "Example Link"
