--- a/_indicators/1_Poverty/1-a-2.md
+++ b/_indicators/1_Poverty/1-a-2.md
@@ -6,12 +6,13 @@ title: Proportion of total government spending on essential services (education,
 new: No
 notes: ""
 datasets:
-  - dataset: "" 
-    uri: "/UUID" # /UniqueID on JKAN or URI to Data.gov
+  - dataset: ""
+    uri: "/UUID"
     todo: 10
     doing: 0
     done: 90
     coverage: ""
+    organization: ""
     issues:
     - issue: info #todo, doing, done
       text: "Example Link"
