Proof of Concept

--- a/_indicators/1_Poverty/1-1-1.md
+++ b/_indicators/1_Poverty/1-1-1.md
@@ -10,19 +10,28 @@ organization: ""
 datasets:
   - dataset: "Example Dataset"
     uri: "/UUID"
-    todo: 10
-    doing: 0
-    done: 90
+    todo: 40
+    doing: 30
+    done: 30
     coverage: ""
     issues:
     - issue: info #todo, doing, done
-      text: "Example Link"
+      text: "This is a comment/resource/reference/issue related to the dataset"
       url: ""
-  - dataset: "Example Dataset 2"
+    - issue: todo #todo, doing, done
+      text: "To Do item - need"
+      url: ""
+    - issue: doing #todo, doing, done
+      text: "Doing item - working/in progress"
+      url: ""
+    - issue: done #todo, doing, done
+      text: "Done item - completed/success"
+      url: ""
+  - dataset: "This is the title of the dataset"
     uri: "/UUID"
-    todo: 10
-    doing: 0
-    done: 90
+    todo: 20
+    doing: 40
+    done: 40
     coverage: ""
     issues:
     - issue: info #todo, doing, done
