Dataset ref model

--- a/_indicators/1_Poverty/1-1-1.md
+++ b/_indicators/1_Poverty/1-1-1.md
@@ -8,8 +8,8 @@ new: No
 notes: ""
 organization: ""
 datasets:
-  - dataset: "Example Dataset"
-    uri: "/UUID"
+  - dataset: "Example Dataset hosted externally (Data.gov)"
+    uri: "http://catalog.data.gov/dataset/poverty-mapping-project-poverty-and-food-security-case-studies"
     todo: 40
     doing: 30
     done: 30
@@ -27,8 +27,8 @@ datasets:
     - issue: done #todo, doing, done
       text: "Done item - completed/success"
       url: ""
-  - dataset: "This is the title of the dataset"
-    uri: "/UUID"
+  - dataset: "Example Dataset hosted internally (JKAN)"
+    uri: "/datasets/sample-dataset"
     todo: 20
     doing: 40
     done: 40
